--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,6 @@ body {
 
 .swiper-slide {
   display:flex;
-  max-width: 33.33%;
   align-items: center;
   justify-content: center;
   background-color: black;
@@ -29,4 +28,25 @@ body {
   font-family: 'Bebas Neue', sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+
+/* watsapp btn */
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.floating-button img {
+  width: 60px;
+  height: 60px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.floating-button img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
